tests/testerina-integration-test/src/test/resources/command-outputs/windows/InvalidFunctionMockingTestCase-testLegacyMockingFunctionInSingleFileProject.txt
Code coverage is not yet supported with single bal files. Ignoring the flag and continuing the test run...
warning: ignoring --includes flag since code coverage is not enabled
Compiling source
	function-legacy-mock.bal
ERROR [function-legacy-mock.bal:(8:1,8:38)] function mocking is not supported with standalone Ballerina files
  |
8 | @test:Mock { functionName: "intAdd" }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: compilation contains errors
